--- a/MSSM/UncOv.tex
+++ b/MSSM/UncOv.tex
@@ -9,21 +9,21 @@ or background events in the $\mu \tau_{h}$ channel.}
     \midrule
 \textbf{ Process }
     & \multicolumn{4}{|c}{\textbf{No b-tag}} & \multicolumn{4}{|c}{\textbf{B-tag}} & \textbf{Correlation}           \\
-     & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & \\
+     & SR & OS high $m_{\text{T}}$ & SS low $m_{\text{T}}$ & SS high $m_{\text{T}}$ & SR & OS high $m_{\text{T}}$ & SS low $m_{\text{T}}$ & SS high $m_{\text{T}}$ & \\
     \midrule
-    \multicolumn{10}{l}{\textbf{Integrated luminosity 13}\TeV} \\
+    \multicolumn{10}{l}{\textbf{Integrated luminosity 13 TeV}} \\
     All from MC    & 6.2\%  &6.2\%  & 6.2\%    & 6.2\% & 6.2\% & 6.2\% & 6.2\% & 6.2\% & Fully correlated\\
     \midrule
     \multicolumn{10}{l}{\textbf{Jet energy scale }}\\
     All from MC & 0--1\% & 0--2\% & 0--1\% & 0--1\%& 0--12\% & 3--11\% & 0--15\% & 0--14\% & Fully correlated \\
     \midrule
-    \multicolumn{10}{l}{\MET \textbf{scale} }\\
+    \multicolumn{10}{l}{\MET~\textbf{scale} }\\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat; TTT,TTJ, VVT,VVJ                         \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
+    TT(T/J),VV(T/J) & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
     \midrule
-    \multicolumn{4}{l}{\MET \textbf{resolution}} \\
+    \multicolumn{4}{l}{\MET~\textbf{resolution}} \\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat; TTT,TTJ,VVT,VVJ                         \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
+    TT(T/J),VV(T/J) & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
     \midrule
     \multicolumn{10}{l}{\textbf{Muon identification and trigger} }\\
     All from MC & 2\% & 2\% &2\% &2\%  & 2\%  & 2\% & 2\% & 2\% & Fully correlated      \\
@@ -32,26 +32,26 @@ or background events in the $\mu \tau_{h}$ channel.}
     ZTT,TTT,VVT, signal     & 5\% & 5\% & 5\% & 5\%   & 5\%  & 5\% & 5\% & 5\% & Fully correlated \\
     ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Cats:C,chns:U    \\
     \midrule
-    \multicolumn{10}{l}{\textbf{B-tagging efficiency} }\\
+    \multicolumn{10}{l}{\textbf{b-Tagging efficiency} }\\
     All from MC & 0--3\% & 0--3\% & 0--3\% & 0--2\% & 1--3\% &  0--3\%& 0--3\% & 0--3\%& Fully correlated\\
     W &  &  &  &  & 4\% & 4\% & 6\% & 6\%& Fully correlated\\
     \midrule
-    \multicolumn{10}{l}{\textbf{B-mistag rate } }\\
+    \multicolumn{10}{l}{\textbf{light jet mis-tagging rate } }\\
     All from MC & & & & & 1--7\% & & & & Fully correlated\\
     \midrule
     \multicolumn{10}{l}{\textbf{Tau-lepton energy scale}}\\
     ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
     \midrule
-    \multicolumn{10}{l}{\textbf{High} $P_{T}$ $\tau_h$\textbf{ ID efficiency } } \\
+    \multicolumn{10}{l}{\textbf{High}-$p_{\text{T}}$ $\Pgth$\textbf{ ID efficiency } } \\
     ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
     \midrule
-    \multicolumn{10}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting} }\\
+    \multicolumn{10}{l}{\textbf{Top quark} $p_{\text{T}}$ \textbf{reweighting} }\\
     TTT,TTJ  & shape & shape & shape & shape & shape & shape & shape & shape & Fully correlated    \\
     \midrule
-    \multicolumn{10}{l}{\textbf{DY reweighting } }\\
+    \multicolumn{10}{l}{\textbf{Drell-Yan reweighting } }\\
     ZTT       & shape & shape & shape & shape  & shape & shape & shape & shape &Fully correlated              \\
     \midrule
-    \multicolumn{10}{l}{\textbf{Jet}$\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
+    \multicolumn{10}{l}{\textbf{Jet} $\rightarrow\Pgth$ \textbf{fake rate reweighting } }\\
     W         & shape &  &  &   & shape &  &  &  &Fully correlated              \\
     \midrule
     \multicolumn{10}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
@@ -61,11 +61,11 @@ or background events in the $\mu \tau_{h}$ channel.}
     ZTT         & 3\% & 3\% & 3\% & 3\% & 5\% & 5\% & 5\% & 5\% & Fully uncorrelated           \\
     \multicolumn{10}{l}{\textbf{Normalisation,} \ttbar}\\
     TTT,TTJ     & 6\% & 6\% & 6\% & 6\%   & 6\% & 6\% &6\% & 6\%  & Fully correlated                \\
-    \multicolumn{10}{l}{\textbf{Normalisation, di-boson} } \\
+    \multicolumn{10}{l}{\textbf{Normalisation, di-boson + single-top} } \\
     VVT,VVJ     & 5\% & 5\% & 5\% & 5\%   & 5\% & 5\% & 5\% & 5\% & Fully correlated         \\
-   \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pgm\Pgm$: $\Pgm$ \textbf{misidentified as} $\tau_{h}$ }\\
+   \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pgm\Pgm$: $\Pgm$ \textbf{misidentified as} $\Pgth$ }\\
     ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% &Cats:C,chns:U        \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$ } \\
+    \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\Pgth$ } \\
     ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Cats:C,chns:U  \\
     \midrule
     \multicolumn{10}{l}{\textbf{W OS/SS ratio (stat) } } \\
@@ -101,21 +101,21 @@ or background events in the \etau channel.}
     \midrule
 \textbf{ Process }
     & \multicolumn{4}{|c}{\textbf{No b-tag}} & \multicolumn{4}{|c}{\textbf{B-tag}} & \textbf{Correlation}           \\
-     & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & SR & OS high $m_{T}$ & SS low $m_{T}$ & SS high $m_{T}$ & \\
+     & SR & OS high $m_{\text{T}}$ & SS low $m_{\text{T}}$ & SS high $m_{\text{T}}$ & SR & OS high $m_{\text{T}}$ & SS low $m_{\text{T}}$ & SS high $m_{\text{T}}$ & \\
     \midrule
-    \multicolumn{10}{l}{\textbf{Integrated luminosity 13}\TeV} \\
+    \multicolumn{10}{l}{\textbf{Integrated luminosity 13 TeV}} \\
     All from MC    & 6.2\%  & 6.2\%  & 6.2\%    & 6.2\% & 6.2\% & 6.2\% & 6.2\% & 6.2\% & Fully correlated\\
     \midrule
     \multicolumn{10}{l}{\textbf{Jet energy scale }}\\
     All from MC & 0--1\% & 0--1\% & 0--2\% & 0--1\%& 1--14\% & 0--12\% & 0--15\% & 0--15\% & Fully correlated \\
     \midrule
-    \multicolumn{10}{l}{\MET \textbf{scale}}\\
+    \multicolumn{10}{l}{\MET~\textbf{scale}}\\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat, TTT,TTJ,VVT,VVJ                         \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
+    TT(T/J),VV(T/J) & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
     \midrule
-    \multicolumn{10}{l}{\MET \textbf{resolution}} \\
+    \multicolumn{10}{l}{\MET~\textbf{resolution}} \\
     ZTT,W     & 2\% & & 2\% & &2\% &  & 2\% & & Corr. between chn/cat, TTT,TTJ,VVT,VVJ          \\
-    TTT,TTJ,VVT,VVJ & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
+    TT(T/J),VV(T/J) & 2\% & & 2\% & &2\% & & 2\% & & uncorr. from ZTT,W \\
     \midrule
     \multicolumn{10}{l}{\textbf{Electron identification and trigger} }\\
     All from MC & 2\% & 2\% &2\% &2\%  & 2\%  & 2\% & 2\% & 2\% & Fully correlated      \\
@@ -124,26 +124,26 @@ or background events in the \etau channel.}
     ZTT,TTT,VVT, signal     & 5\% & 5\% & 5\% & 5\%   & 5\%  & 5\% & 5\% & 5\% & Fully correlated \\
     ZTT,TTT,VVT, signal     & 3\% & 3\% & 3\% & 3\%   & 3\%  & 3\% & 3\% & 3\% & Cats:C,chns:U    \\
     \midrule
-    \multicolumn{10}{l}{\textbf{B-tagging efficiency} }\\
+    \multicolumn{10}{l}{\textbf{b-Tagging efficiency} }\\
     All from MC & 0--3\% & 0--3\% & 0--4\% & 0--4\% & 1--4\% & 0--2\% & 0--2\% & 0--2\% & Fully correlated\\
     W &  &  &  &  & 5\% & 2\% & 10\% & 3\% & Fully correlated\\
     \midrule
-    \multicolumn{10}{l}{\textbf{B-mistag rate } }\\
+    \multicolumn{10}{l}{\textbf{Light jet mis-tagging rate } }\\
     All from MC & & & & & 0--3\% & & & & Fully correlated\\
     \midrule
     \multicolumn{10}{l}{\textbf{Tau-lepton energy scale}}\\
     ZTT,TTT,VVT, signal     & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
     \midrule
-    \multicolumn{10}{l}{\textbf{High} $P_{T}$ $\tau_h$\textbf{ ID efficiency } } \\
+    \multicolumn{10}{l}{\textbf{High}-$p_{\text{T}}$ $\Pgth$\textbf{ ID efficiency } } \\
     ZTT,TTT,VVT, signal    & shape & shape & shape & shape  & shape & shape & shape & shape & Cats:C,chns:U   \\
     \midrule
-    \multicolumn{10}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting} }\\
+    \multicolumn{10}{l}{\textbf{Top quark} $p_{\text{T}}$ \textbf{reweighting} }\\
     TTT,TTJ  & shape & shape & shape & shape & shape & shape & shape & shape & Fully correlated    \\
     \midrule
-    \multicolumn{10}{l}{\textbf{DY reweighting } }\\
+    \multicolumn{10}{l}{\textbf{Drell-Yan reweighting } }\\
     ZTT       & shape & shape & shape & shape  & shape & shape & shape & shape &Fully correlated              \\
     \midrule
-    \multicolumn{10}{l}{\textbf{Jet}$\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
+    \multicolumn{10}{l}{\textbf{Jet} $\rightarrow\tau_h$ \textbf{fake rate reweighting } }\\
     W         & shape &  &  &   & shape &  &  &  &Fully correlated              \\
     \midrule
     \multicolumn{10}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
@@ -153,11 +153,11 @@ or background events in the \etau channel.}
     ZTT         & 3\% & 3\% & 3\% & 3\% & 5\% & 5\% & 5\% & 5\% & Fully uncorrelated           \\
     \multicolumn{10}{l}{\textbf{Normalisation,} \ttbar}\\
     TTT,TTJ     & 6\% & 6\% & 6\% & 6\%   & 6\% & 6\% &6\% & 6\%  & Fully correlated                \\
-    \multicolumn{10}{l}{\textbf{Normalisation, di-boson} } \\
+    \multicolumn{10}{l}{\textbf{Normalisation, di-boson + single-top} } \\
     VVT,VVJ     & 5\% & 5\% & 5\% & 5\%   & 5\% & 5\% & 5\% & 5\% & Fully correlated         \\
-   \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pe\Pe$: $\Pe$ \textbf{misidentified as} $\tau_{h}$ }\\
+   \multicolumn{10}{l}{ \textbf{Normalisation,} $\PZ\to\Pe\Pe$: $\Pe$ \textbf{misidentified as} $\Pgth$ }\\
     ZL     & 30\%  & 30\% & 30\% & 30\%   & 30\% & 30\% & 30\% &30\% & Cats:C,chns:U       \\
-    \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$ } \\
+    \multicolumn{10}{l}{\textbf{Normalisation,} $\PZ$\textbf{+jets : jet misidentified as} $\Pgth$ } \\
     ZJ,TTJ     & 20\%  & 20\% &20\% &20\%      & 20\% & 20\% &20\% &20\%  & Cats:C,chns:U       \\
     \midrule
     \multicolumn{10}{l}{\textbf{W OS/SS ratio (stat) } } \\
@@ -193,40 +193,40 @@ or background events in the \tautau channel.}
     \midrule
     Process & No b-tag & B-tag & Correlation                   \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
+    \multicolumn{4}{l}{\textbf{Integrated luminosity 13 TeV}}\\
     All from MC      & 6.2\%      & 6.2\%  & Fully correlated                           \\
     \midrule
     \multicolumn{4}{l}{\textbf{Jet energy scale}} \\
     All from MC      & 0--4\%      & 0--9\%  & Fully correlated                    \\
     \midrule
-    \multicolumn{4}{l}{\MET \textbf{scale}} \\
+    \multicolumn{4}{l}{\MET~\textbf{scale}} \\
     ZTT,W     & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TTT,TTJ,VVT,VVJ     & 2\%     & 2\% & ZTT/W uncorrelated from TTT,TTJ,VVT,VVJ                          \\
     \midrule
-    \multicolumn{4}{l}{\MET \textbf{resolution}} \\
+    \multicolumn{4}{l}{\MET~\textbf{resolution}} \\
     ZTT,W     & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TTT,TTJ,VVT,VVJ     & 2\%     & 2\% & ZTT/W uncorrelated from TTT,TTJ,VVT,VVJ                          \\
     \midrule
-    \multicolumn{4}{l}{Tau-lepton identification and trigger} \\
+    \multicolumn{4}{l}{\textbf{Tau-lepton identification and trigger}} \\
     ZTT,TTT,VVT, signal         & 10\%    & 10\%  & Fully correlated                      \\
     ZTT,TTT,VVT, signal         & 9.2\%     & 9.2\%   & Correlated between categories, uncorrelated between channels \\
     \midrule
-    \multicolumn{4}{l}{\textbf{B-tagging efficiency} }\\
+    \multicolumn{4}{l}{\textbf{b-Tagging efficiency} }\\
     All from MC   & 0--4\%     & 0--11\%  & Fully correlated                  \\
     \midrule
-   \multicolumn{4}{l}{\textbf{B-mistag rate}} \\
+   \multicolumn{4}{l}{\textbf{Light jet mis-tagging rate}} \\
     All from MC    &  0--1\%    & 0--12\%  & Fully correlated                  \\
     \midrule
     \multicolumn{4}{l}{\textbf{Tau-lepton energy scale}} \\
     ZTT,TTT,VVT, signal       & shape      & shape & Correlated between categories, uncorrelated between channels                       \\
     \midrule
-    \multicolumn{4}{l}{\textbf{High} $P_{T}$ $\tau_h$ \textbf{ID efficiency}} \\
+    \multicolumn{4}{l}{\textbf{High}-$p_{\text{T}}$ $\Pgth$ \textbf{ID efficiency}} \\
     ZTT,TTT,VVT, signal       & shape      & shape & Correlated between categories, uncorrelated between channels   \\
     \midrule
-    \multicolumn{4}{l}{\textbf{DY reweighting } } \\
+    \multicolumn{4}{l}{\textbf{Drell-Yan reweighting } } \\
     ZTT       & shape      & shape & Fully correlated                       \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting } } \\
+    \multicolumn{4}{l}{\textbf{Top quark} $p_{\text{T}}$ \textbf{reweighting } } \\
     TTT,TTJ & shape & shape & Fully correlated                  \\
     \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production}}\\
@@ -238,13 +238,13 @@ or background events in the \tautau channel.}
     \multicolumn{4}{l}{\textbf{Normalisation, }\ttbar}\\
     TTT,TTJ        & 6\%       & 6\%  & Fully correlated                       \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, di-boson}}\\
+    \multicolumn{4}{l}{\textbf{Normalisation, di-boson + single-top}}\\
     VVT,VVJ &  5\%        & 5\%       & Fully correlated                        \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ\to\Pe\Pe$: $\Pe$\textbf{ misidentified as }$\tau_{h}$}\\
+    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ\to\Pe\Pe$: $\Pe$\textbf{ misidentified as }$\Pgth$}\\
     ZL & 10\%     & 10\%       & Correlated between categories, uncorrelated between channels                        \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$\textbf{+jets : jet misidentified as} $\tau_{h}$}\\
+    \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$\textbf{+jets : jet misidentified as} $\Pgth$}\\
     ZJ,W,TTJ & 20\%     & 20\%       & Correlated bewteen categories, uncorrelated between channels     \\
     \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet (stat) }} \\
@@ -252,7 +252,7 @@ or background events in the \tautau channel.}
     \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet (syst) }} \\
     QCD  & 12\% & 14\%  & Fully uncorrelated\\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
+    \multicolumn{4}{l}{\textbf{Normalisation, \Wjets }}\\
     W & 4\% & 4\% & Fully correlated \\
 \bottomrule
 \end{tabular}}
@@ -273,17 +273,17 @@ or background events in the \emu channel.}
     \textbf{Process}
     &  \textbf{No b-tag} & \textbf{B-tag} & \textbf{Correlation}                   \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
+    \multicolumn{4}{l}{\textbf{Integrated luminosity 13 TeV}}\\
     All from MC      & 6.2\%      & 6.2\% & Fully correlated                            \\
     \midrule
     \multicolumn{4}{l}{\textbf{Jet energy scale}}\\
     All from MC   & 0--1\% & 1--69\% &Fully correlated \\
     \midrule
-    \multicolumn{4}{l}{\MET \textbf{scale}} \\
+    \multicolumn{4}{l}{\MET~\textbf{scale}} \\
     ZTT,W    & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TT,VV    & 2\%     & 2\% & ZTT,W uncorrelated from TT,VV \\
     \midrule
-   \multicolumn{4}{l}{ \MET \textbf{resolution}} \\
+   \multicolumn{4}{l}{\MET~\textbf{resolution}} \\
     ZTT,W & 2 \%    & 2\%  & Correlated between chn/cat,\\
     TT,VV & 2\%     & 2\%  & ZTT,W uncorrelated from TT,VV\\
     \midrule
@@ -293,19 +293,19 @@ or background events in the \emu channel.}
     \multicolumn{4}{l}{\textbf{Muon identification and trigger}  }\\
     All from MC      & 2\%     & 2\%  & Fully correlated                      \\
     \midrule
-    \multicolumn{4}{l}{\textbf{B-tagging efficiency}} \\
+    \multicolumn{4}{l}{\textbf{b-Tagging efficiency}} \\
     All from MC     & 0--3\%     & 1--3\%  & Fully correlated                  \\
     \midrule
-    \multicolumn{4}{l}{\textbf{B-mistag rate}}\\
+    \multicolumn{4}{l}{\textbf{Light jet mis-tagging rate}}\\
     All from MC      &     & 0--10\% & Fully correlated                    \\
     \midrule
     \multicolumn{4}{l}{\textbf{Electron energy scale}} \\
     ZTT,signal      & shape      & shape  & Fully correlated                \\
     \midrule
-    \multicolumn{4}{l}{\textbf{DY reweighting }}\\
+    \multicolumn{4}{l}{\textbf{Drell-Yan reweighting }}\\
      ZTT       & shape      & shape & Fully correlated                       \\
    \midrule
-    \multicolumn{4}{l}{\textbf{Top quark} $P_{T}$ \textbf{reweighting}}\\
+    \multicolumn{4}{l}{\textbf{Top quark} $p_{\text{T}}$ \textbf{reweighting}}\\
     TT & shape & shape  & Fully correlated                 \\
     \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }$\PZ$ \textbf{production} }\\
@@ -317,13 +317,13 @@ or background events in the \emu channel.}
     \multicolumn{4}{l}{\textbf{Normalisation, }\ttbar}\\
     TT        & 6\%       & 6\% & Fully correlated                        \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, di-boson}} \\
+    \multicolumn{4}{l}{\textbf{Normalisation, di-boson + single-top}} \\
     VV        & 5\%       & 5\% & Fully correlated                       \\
     \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, QCD multijet }}\\
     QCD & 23\% & 34\% & Fully uncorrelated\\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
+    \multicolumn{4}{l}{\textbf{Normalisation, \Wjets }}\\
     W+jets & 4\% & 4\% & Fully correlated\\
 \bottomrule
 \end{tabular}}
@@ -343,36 +343,36 @@ or background events in the $Z\rightarrow\mu\mu$ channel.}
     \textbf{Process}
     &  \textbf{No b-tag} & \textbf{B-tag} & \textbf{Correlation}                   \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Integrated luminosity 13}\TeV}\\
+    \multicolumn{4}{l}{\textbf{Integrated luminosity 13 TeV}}\\
     All from MC (not ZL)     & 6.2\%      & 6.2\% & Fully correlated                            \\
     \midrule
     \multicolumn{4}{l}{\textbf{Jet energy scale}}\\
     All from MC   & 0--1\% & 1--69\% &Fully correlated \\
     \midrule
-    \multicolumn{4}{l}{\MET \textbf{scale}} \\
+    \multicolumn{4}{l}{\MET~\textbf{scale}} \\
     ZTT,W    & 2\%     & 2\% & Correlated between chn/cat,                          \\
     TT,VV    & 2\%     & 2\% & ZTT,W uncorrelated from TT,VV \\
     \midrule
-   \multicolumn{4}{l}{ \MET \textbf{resolution}} \\
+   \multicolumn{4}{l}{\MET~\textbf{resolution}} \\
     ZTT,W & 2 \%    & 2\%  & Correlated between chn/cat,\\
     TT,VV & 2\%     & 2\%  & ZTT,W uncorrelated from TT,VV\\
     \midrule
     \multicolumn{4}{l}{\textbf{Muon identification and trigger}}\\
     All from MC       & 2--4\%        & 2--4\% & Fully correlated                              \\
     \midrule
-    \multicolumn{4}{l}{\textbf{B-tagging efficiency}} \\
+    \multicolumn{4}{l}{\textbf{b-Tagging efficiency}} \\
     All from MC     & 0--3\%     & 1--3\%  & Fully correlated                  \\
     \midrule
-    \multicolumn{4}{l}{\textbf{B-mistag rate}}\\
+    \multicolumn{4}{l}{\textbf{Light jet mis-tagging rate}}\\
     All from MC      &     & 0--10\% & Fully correlated                    \\
     \midrule
     \multicolumn{4}{l}{\textbf{Normalisation, }\ttbar}\\
     TT        & 6\%       & 6\% & Fully correlated                        \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, di-boson}} \\
+    \multicolumn{4}{l}{\textbf{Normalisation, di-boson + single-top}} \\
     VV        & 5\%       & 5\% & Fully correlated                       \\
     \midrule
-    \multicolumn{4}{l}{\textbf{Normalisation, W + jets }}\\
+    \multicolumn{4}{l}{\textbf{Normalisation, \Wjets }}\\
     W+jets & 4\% & 4\% & Fully correlated\\
     \bottomrule
 \end{tabular}}
