--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -295,7 +295,7 @@ decays. The isolation variable used for muons is very similar to the one describ
 electrons in equation \ref{eqn:electron_reliso}, however the cone around the direction of the
 muon was chosen as $\Delta R = 0.4$ during both Run 1 and Run 2.
 
-\section{\acl{PF}}
+\section{Particle flow}
 \label{sec:objects_pf}
 All stable particles are reconstructed and identified using the \ac{PF} algorithm \cite{cms-pf-2009,cms-pf-2010-commfirst,cms-pf-2010-2}, which
 combines the information from all of the different subdetectors of \ac{CMS}. This makes
