--- a/backmatter.tex
+++ b/backmatter.tex
@@ -18,6 +18,7 @@
 \acro{QCD}[QCD]{quantum chromodynamics}
 \acro{QED}[QED]{quantum electrodynamics}
 \acro{LEP}[LEP]{Large Electron-Positron}
+\acro{VBF}[VBF]{vector boson fusion}
 \acro{MC}[MC]{Monte Carlo}
 \acro{CKM}[CKM]{Cabibbo-Kobayashi-Maskawa}
 \acro{CMS}[CMS]{Compact Muon Solenoid}
@@ -52,7 +53,7 @@
 \acro{DAQ}[DAQ]{Data Acquisition}
 \acro{WLCG}[WLCG]{Worldwide LHC Computing Grid}
 \acro{RF}[RF]{radio frequency}
-\acro{PF}[PF]{Particle Flow}
+\acro{PF}[PF]{particle flow}
 \acro{BDT}[BDT]{boosted decision tree}
 \acro{KF}[KF]{Kalman Filter}
 \acro{CTF}[CTF]{Combinatorial Track Finder}
@@ -85,7 +86,15 @@ Uncertainties marked "Fully correlated" are correlated between the different
 decay channels and event categories, those marked "Fully uncorrelated" are
 uncorrelated between the different decay channels and event categories. "Cats:C,chns:U"
 indicates that the uncertainty is correlated between categories but uncorrelated between
-the different decay channels.
+the different decay channels. For brevity the backgrounds are denoted with shorthand notations.
+`ZTT' indicates the \Ztautau component. 'ZJ' is reserved for the \Zellell background
+in which the tau is faked by a jet. The \Zellell background in which the tau is faked
+by an electron or muon is indicated as 'ZL'. `W' indicates the \Wjets process. `TT' denotes
+the \ttbar background, with  `TTT' and `TTJ'
+indicating the \ttbar background with real hadronic taus and without real hadronic taus, respectively. 
+The di-boson and single-top backgrounds are denoted `VV', with
+`VVT' and `VVJ' indicating the di-boson plus single-top background with real hadronic taus
+and without real hadronic taus, respectively. The QCD multijet background is denoted `QCD'.
 \input{MSSM/UncOv}
 
 
