--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -14,26 +14,27 @@ researchers must make clear to others the licence terms of this work.
 % Abstract
 \begin{abstract}%[\smaller \thetitle\\ \vspace*{1cm} \smaller {\theauthor}]
   %\thispagestyle{empty}
-The \ac{CMS} detector is a general-purpose detector located at the Large Hadron
+The Compact Muon Solenoid (CMS) detector is a general-purpose detector located at the Large Hadron
 Collider at CERN. It was designed to test the predictions of the standard model 
 and to search for the Higgs boson in addition to searches for new physics beyond
 the standard model.
 The analyses presented in this thesis are searches for neutral
-Higgs bosons with tau leptons in the final state, and use proton-proton collision data recorded
-by \acs{CMS} during 2012, 2015 and 2016. The searches are performed in the
-context of the \ac{MSSM}. One of the analyses, using $19.7\,\invfb$ collected
+Higgs bosons with tau leptons in the final state. These searches use proton-proton collision data recorded
+by CMS during 2012, 2015 and 2016. The searches are performed in the
+context of the minimal supersymmetric standard model (MSSM). One of the analyses, using $19.7\,\invfb$ 
+of data collected
 during 2012 at $\sqrt{s}=8\,\TeV$, is a search for a heavy neutral Higgs boson
-decaying into two $125\,\GeV$ \ac{MSSM} Higgs bosons with \ac{SM}-like properties,
+decaying into two $125\,\GeV$ Higgs bosons with standard model-like properties,
 with two b-quarks and two tau leptons in the final state. The other analyses use 
-$2.3\,\invfb$ collected during 2015 and $12.9\,\invfb$ collected during 2016, both
-at $\sqrt{s}=13\,\TeV$. These are searches for neutral \ac{MSSM}
-Higgs bosons in the mass range of $90\,\GeV$--$3.2\,\TeV$ directly decaying
+$2.3\,\invfb$ of data collected during 2015 and $12.9\,\invfb$ of data collected during 2016, both
+at $\sqrt{s}=13\,\TeV$. These are searches for neutral MSSM
+Higgs bosons in the mass range of \mbox{$90\,\GeV$--$3.2\,\TeV$} directly decaying
 into pairs of tau leptons. 
-No significant excess is observed in any of the searches. Upper limits at 95\% confidence 
-level are set on the cross section times branching ratio for the Higgs production process
-in consideration. In addition, limits are set in the \mA-\tanb~parameter space of 
-several \ac{MSSM} benchmark scenarios, and in the \cosba-\tanb~parameter space of an example
-of a two Higgs doublet model.
+No significant excess is observed in any of the searches. Upper limits at the 95\% confidence 
+level are set on the cross section times branching ratio for the production of Higgs bosons in the \ac{MSSM}.
+In addition, limits are set in the \mA-\tanb~parameter space of 
+several \ac{MSSM} benchmark scenarios, and in the \cosba-\tanb~parameter space of 
+a two Higgs doublet model.
 
 \end{abstract}
 
@@ -52,11 +53,11 @@ carried out as part of the CMS \Htotautau working group, and in collaboration wi
 For the results presented in chapter \ref{chap:hhh} I contributed to the data analysis of two out of three
 final states presented in the final public result, and I 
 was responsible for the statistical inference. This included
-the interpretation of the results in MSSM and two Higgs doublet model benchmark scenarios. The 
-work is included in Ref. \cite{CMS-HIG-14-034}. For the results presented in chapter \ref{chap:mssm}
+the interpretation of the results in MSSM and 2HDM benchmark scenarios. The 
+work is included in reference \cite{CMS-HIG-14-034}. For the results presented in chapter \ref{chap:mssm}
 I was responsible for all stages of the analysis, including the optimisation
 of object selection and event categorisation, as well as studies of background
-methods for three out of four channels presented in the final version of the analysis,
+methods for three out of four channels in the public result of the analysis,
 evaluation of systematic uncertainties in all four channels, and production of the statistical
 results, including model interpretations. This work is included in the most recent
 preliminary result \cite{CMS-PAS-HIG-16-037}, as well as a predating preliminary
